Fix color contrast

--- a/src/components/DataTable.less
+++ b/src/components/DataTable.less
@@ -67,6 +67,7 @@
 }
 .DataTable__row[aria-selected='true'],
 .DataTable__row[aria-selected='true']:nth-child(even) {
+	color: @font-color-black;
 	background-color: @sea;
 }
 .DataTable__row:hover,
